<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <import type="com.mad.snapoverflow.viewmodel.CameraFragmentViewModel"/>

        <variable
            name="UploadViewModel"
            type="com.mad.snapoverflow.viewmodel.UploadViewModel"/>

        <variable
            name="CameraViewModel"
            type="com.mad.snapoverflow.viewmodel.CameraFragmentViewModel"/>

        <variable
            name="MapViewModel"
            type="com.mad.snapoverflow.viewmodel.MapFragmentViewModel"/>

    </data>



<android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorWhite">


    <android.support.constraint.Guideline
        android:id="@+id/guidelineUpload"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineUpload2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineUpload3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/imageViewUpload"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/guidelineUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/my_imageViewLogoUpload"
        android:layout_width="155dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_stack_white"
        app:layout_constraintTop_toTopOf="@id/guidelineUpload"
        app:layout_constraintBottom_toBottomOf="@id/guidelineUpload"
        />

    <ImageView
        android:id="@+id/my_imageViewUp"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        android:src="@drawable/upload_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineUpload"
        app:layout_constraintBottom_toBottomOf="@id/guidelineUpload"
        />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineUpload3"
        app:layout_constraintBottom_toBottomOf="@id/guidelineUpload3"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/tempImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="top"
        android:scaleType="fitXY"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineUpload2"
        app:layout_constraintBottom_toBottomOf="@id/guidelineUpload2"
       />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineUpload3"
        app:layout_constraintBottom_toBottomOf="@id/guidelineUpload3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:hint="@string/title_hint" />

            <TextView
                android:id="@+id/GPS"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/gps_fill" />

            <TextView
                android:id="@+id/timeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/time_date" />

            <EditText
                android:id="@+id/contentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/description_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <Button
                    android:id="@+id/uploadBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_upload"
                    style="@style/buttonStyle"
                    android:background="@drawable/button_main"
                    android:stateListAnimator="@null"
                    android:layout_marginRight="15dp"/>

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_back"
                    style="@style/buttonStyle"
                    android:background="@drawable/button_main"
                    android:stateListAnimator="@null"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
</layout>